# wildfire-detection

./: Makefile  README.md  pyproject.toml  test_environment.py
interface/: main.py
notebooks/: metadata_images.ipynb  preprocess_data.ipynb  test.ipynb  train_model.ipynb
wildfire_detection/: utils.py
wildfire_detection/data/: data_utils.py
wildfire_detection/models/: models_utils.py
