[tool.poetry]
name = "wildfire-detection"
version = "0.1.0"
description = ""
authors = ["Svechnikar Daniil <danilmozgovoy2493@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.2.1%2Bcu121-cp312-cp312-win_amd64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.17.1%2Bcu121-cp312-cp312-win_amd64.whl" }
filelock = { url = "https://download.pytorch.org/whl/filelock-3.9.0-py3-none-any.whl" }
typing-extensions = { url = "https://download.pytorch.org/whl/typing_extensions-4.8.0-py3-none-any.whl" }
sympy = { url = "https://download.pytorch.org/whl/sympy-1.12-py3-none-any.whl" }
networkx = { url = "https://download.pytorch.org/whl/networkx-3.2.1-py3-none-any.whl" }
jinja2 = { url = "https://download.pytorch.org/whl/Jinja2-3.1.2-py3-none-any.whl" }
fsspec = { url = "https://download.pytorch.org/whl/fsspec-2023.4.0-py3-none-any.whl" }
numpy = { url = "https://download.pytorch.org/whl/numpy-1.26.3-cp312-cp312-win_amd64.whl" }
pillow = { url = "https://download.pytorch.org/whl/pillow-10.2.0-cp312-cp312-win_amd64.whl" }
MarkupSafe = { url = "https://download.pytorch.org/whl/MarkupSafe-2.1.3-cp312-cp312-win_amd64.whl" }
mpmath = { url = "https://download.pytorch.org/whl/mpmath-1.3.0-py3-none-any.whl" }
ultralytics = "^8.1.20"
gpustat = "^1.1.1"
prettytable = "^3.10.0"
nvitop = "^1.3.2"
flet = "^0.21.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
